# GitforLab

./: CCF2014年下半年财务报表.xlsx  README.md
ContentMatch/: ContentMatch.opensdf  ContentMatch.sln  makefile
ContentMatch/ContentMatch/: ArticleAnalyze.cpp  ArticleAnalyze.h  CMakeLists.txt  CompareArticles.cpp  ContentMatch.vcxproj  ContentMatch.vcxproj.filters  ModifyResult.cpp  ModifyResult.h  main.cpp  split.cpp
ContentMatch/ContentMatch/Debug/: CL.read.1.tlog  CL.write.1.tlog  ContentMatch.lastbuildstate  cl.command.1.tlog  vc100.idb
ContentMatch/ContentMatch/result/: Output_2014-12-02_18-46-48.txt  Output_2014-12-02_18-55-47.txt  Output_2014-12-02_19-13-42.txt  Output_2014-12-02_19-14-52.txt  Output_2014-12-02_19-19-45.txt  Output_2014-12-02_19-24-32.txt  Output_2014-12-02_19-27-51.txt  Output_2014-12-11_19-34-53.txt
ContentMatch/ContentMatch/src/: ArticleAnalyze.cpp  ArticleAnalyze.h  CompareArticles.cpp  CompareArticles.h  ContentMatchTest.cpp  ModifyResult.h  SentAndPosition.cpp  SentenceSplit.h
ContentMatchThrift/Server/: CMakeLists.txt  makefile
ContentMatchThrift/Server/include/: Logger.h
ContentMatchThrift/Server/include/thrift/: config.h
ContentMatchThrift/Server/src/: CompareArticles.h  ICTContentMatch.cpp  ICTContentMatch_server.skeleton.cpp  ModifyResult.h  SentAndPosition.h  ict_content_match_server_constants.cpp  ict_content_match_server_types.cpp  splitPunct.txt
ContentMatchThrift20141211/: Logger.cpp
PrimerCPlusPlusLearning/: PrimerCPlusPlusLearning.sln
PrimerCPlusPlusLearning/Debug/: PrimerCPlusPlusLearning.ilk
PrimerCPlusPlusLearning/PrimerCPlusPlusLearning/: PrimerCPlusPlusLearning.vcxproj  PrimerCPlusPlusLearning.vcxproj.filters  templete.cpp  testofstream.txt
SentenceSplit/: SentenceSplit.sln
SentenceSplit/Debug/: SentenceSplit.ilk
SentenceSplit/SentenceSplit/: SentAndPosition.h  SentenceSplit.cpp  SentenceSplit.h  SentenceSplit.vcxproj  SentenceSplit.vcxproj.filters  another.txt  main.cpp  result.txt  source.txt
WebSearch/: CMakeLists.txt
WebSearch/WebSearch/: WebSearch.sln
WebSearch/WebSearch/WebSearch/: WebSearch.vcxproj  WebSearch.vcxproj.filters  makefile
WebSearch/WebSearch/WebSearch/Debug/: CL.read.1.tlog  CL.write.1.tlog  WebSearch.lastbuildstate  cl.command.1.tlog  vc100.idb
WebSearch/WebSearch/WebSearch/backup/: GetMeta.cpp  GetMeta.h  SimiCompare.cpp  SimiCompare.h  WebSearchTest.cpp  WebSearchTestbefore.cpp
WebSearch/WebSearch/WebSearch/config/: FamilyNameDic.txt  LexiconDic.txt  NewsConfigFile.txt  NewsFilterNodeFile.txt  RealtimeSearch.cfg  SourceMetaDict.txt  StopWordDic.txt  sim.config.xml
WebSearch/WebSearch/WebSearch/dict/: en_stop_word.dic
WebSearch/WebSearch/WebSearch/include/: GetMeta.h  TextSimilarityAPI.h
WebSearch/WebSearch/WebSearch/src/: GetMeta.cpp  Output_2014-10-28_17-24-54_KeyWord-hello.txt  Output_2014-10-28_17-54-27_KeyWord-淘宝.txt  Output_2014-10-28_17-56-36_KeyWord-法院“进驻”淘宝网.txt  Output_2014-10-28_18-01-31_KeyWord-法院“进驻”淘宝网.txt  Output_2014-10-28_18-17-26_KeyWord-法院“进驻”淘宝网.txt  Output_2014-10-28_18-20-02_KeyWord-法院“进驻”淘宝网.txt  Output_2014-10-28_18-22-31_KeyWord-褰辫甯濆浗.txt  Output_2014-10-28_18-25-21_KeyWord-褰辫甯濆浗.txt  Output_2014-10-28_18-33-27_KeyWord-闃块噷宸村反.txt  SimiCompare.cpp  SimiCompare.h  Test.cpp  TextSimAPITest.cpp  WebSearchTest.cpp  input.txt  makefile  makefile4getmeta  source.txt
test/: main.ncb  main.opt  main.plg  test.cpp
test/Debug/: main.ilk  main.pch  (+1 more)
(+41 files in other folders)
